...
    }
}

@Composable fun BackSpaceKey(onClick: () -> Unit = {}) {
    Box(
        Modifier
            .testTag("BackSpace")
            .fillMaxWidth()
            .aspectRatio(KEY_ASPECT_RATIO, false)
            .clickable { onClick() },
        contentAlignment = Alignment.Center
    ) {
        Icon(
...
